# Communication

./: .gitignore  CMakeLists.txt  README.md  lib_manager
CAN/L432/: .cproject  .mxproject  .project  CMakeLists.txt  L432 Debug.launch  L432.ioc  README.md
CAN/L432/Core/Inc/: can.h  can_vars.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
CAN/L432/Core/Src/: can.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
CAN/L432/Debug/: L432.elf  L432.list  L432.map  makefile  objects.list
CAN/L432/Debug/Core/Src/: can.cyclo  can.d  can.su  main.cyclo  main.d  main.su  stm32l4xx_hal_msp.cyclo  stm32l4xx_hal_msp.d  stm32l4xx_hal_msp.su  stm32l4xx_it.cyclo  stm32l4xx_it.d  stm32l4xx_it.su  subdir.mk  syscalls.d  sysmem.d  system_stm32l4xx.d
CAN/L432/Debug/Core/Startup/: startup_stm32l432kcux.d  subdir.mk
CAN/L432/Debug/Drivers/STM32L4xx_HAL_Driver/Src/: stm32l4xx_hal.d  stm32l4xx_hal_can.cyclo  stm32l4xx_hal_can.d  stm32l4xx_hal_cortex.d  stm32l4xx_hal_dma.d  stm32l4xx_hal_dma_ex.d  stm32l4xx_hal_exti.d  stm32l4xx_hal_flash.d  stm32l4xx_hal_flash_ex.d  stm32l4xx_hal_flash_ramfunc.d  stm32l4xx_hal_gpio.d  stm32l4xx_hal_i2c.d  stm32l4xx_hal_i2c_ex.d  stm32l4xx_hal_pwr.d  stm32l4xx_hal_pwr_ex.d  stm32l4xx_hal_rcc.d  stm32l4xx_hal_rcc_ex.d  subdir.mk
CAN/Raspberry/: CAN.pc.in  CMakeLists.txt  README.md
CAN/Raspberry/include/: can.h  can_vars.h  define_can.h
CAN/Raspberry/src/: can.cpp  main.cpp
CAN/include/: can.h  can_vars.h
CAN/src/: can.cpp  main.cpp
Logs/: CMakeLists.txt  README.md
Logs/include/: logs.h
Logs/lib/: logs.h  main.cpp
Logs/src/: logs.cpp  main.cpp
XBee/: CMakeLists.txt  Config.cmake.in  README.md
XBee/include/: define_xbee.h  serialib.h  xbee.h  xbee_vars.h
XBee/src/: main.cpp  serialib.cpp  xbee.cpp
Xbee/: CMakeLists.txt  README.md  main.cpp
Xbee/include/: xbee.h  xbee_vars.h
Xbee/src/: main.cpp  serialib.cpp  xbee.cpp
